--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
     "serialize-javascript": "1.4.0",
+    "universal-cookie": "^3.1.0",
     "webpack": "3.5.6",
     "webpack-dev-server": "2.8.2",
     "webpack-merge": "4.1.0",
