--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "npm-run-all --parallel dev:*",
     "dev:server": "nodemon --watch build --exec node build/bundle.js",
     "dev:build-server": "webpack --config webpack.server.js --watch",
-    "dev:build-client": "webpack --config webpack.client.js --watch"
+    "dev:build-client": "webpack --config webpack.client.js --watch",
+    "sass": "sass --watch public/sass/app.scss:public/css/style.css"
   },
   "author": "",
   "license": "ISC",
