--- a/package.json
+++ b/package.json
@@ -15,20 +15,22 @@
   "dependencies": {
     "axios": "0.16.2",
     "babel-cli": "6.26.0",
-    "babel-core": "6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "7.1.2",
-    "babel-preset-env": "1.6.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
-    "compression": "1.7.0",
+    "compression": "^1.7.4",
     "concurrently": "3.5.0",
-    "express": "4.15.4",
+    "express": "^4.16.4",
     "express-http-proxy": "1.0.6",
-    "lodash": "4.17.4",
-    "nodemon": "1.12.0",
+    "lodash": "^4.17.11",
+    "nodemon": "^1.19.0",
     "npm-run-all": "4.1.1",
+    "prop-types": "^15.7.2",
     "react": "16.0.0",
+    "react-day-picker": "^7.3.0",
     "react-dom": "16.0.0",
     "react-helmet": "5.2.0",
     "react-redux": "5.0.6",
@@ -36,6 +38,7 @@
     "react-router-dom": "4.2.2",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
+    "remixicon": "^1.2.0",
     "serialize-javascript": "1.4.0",
     "universal-cookie": "^3.1.0",
     "webpack": "3.5.6",
